Added more projects

--- a/project/machine_learning/Linear_Regression.ipynb
+++ b/project/machine_learning/Linear_Regression.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "customers = pd.read_csv(\"../Data/ecommerce\")"
+    "customers = pd.read_csv(\"../data/ecommerce\")"
    ]
   },
   {
