--- a/project/machine_learning/DecisionTrees_RandomForest.ipynb
+++ b/project/machine_learning/DecisionTrees_RandomForest.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loans = pd.read_csv('../Data/loan_data.csv')"
+    "loans = pd.read_csv('../data/loan_data.csv')"
    ]
   },
   {
