--- a/project/machine_learning/DecisionTrees_RandomForest.ipynb
+++ b/project/machine_learning/DecisionTrees_RandomForest.ipynb
@@ -5,29 +5,36 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Random Forest Project \n",
+    "# Projeto de Random Forests\n",
     "\n",
-    "Here are what the columns represent:\n",
-    "* credit.policy: 1 if the customer meets the credit underwriting criteria of LendingClub.com, and 0 otherwise.\n",
-    "* purpose: The purpose of the loan (takes values \"credit_card\", \"debt_consolidation\", \"educational\", \"major_purchase\", \"small_business\", and \"all_other\").\n",
-    "* int.rate: The interest rate of the loan, as a proportion (a rate of 11% would be stored as 0.11). Borrowers judged by LendingClub.com to be more risky are assigned higher interest rates.\n",
-    "* installment: The monthly installments owed by the borrower if the loan is funded.\n",
-    "* log.annual.inc: The natural log of the self-reported annual income of the borrower.\n",
-    "* dti: The debt-to-income ratio of the borrower (amount of debt divided by annual income).\n",
-    "* fico: The FICO credit score of the borrower.\n",
-    "* days.with.cr.line: The number of days the borrower has had a credit line.\n",
-    "* revol.bal: The borrower's revolving balance (amount unpaid at the end of the credit card billing cycle).\n",
-    "* revol.util: The borrower's revolving line utilization rate (the amount of the credit line used relative to total credit available).\n",
-    "* inq.last.6mths: The borrower's number of inquiries by creditors in the last 6 months.\n",
-    "* delinq.2yrs: The number of times the borrower had been 30+ days past due on a payment in the past 2 years.\n",
-    "* pub.rec: The borrower's number of derogatory public records (bankruptcy filings, tax liens, or judgments)."
+    "### Apresentação:\n",
+    "O LendingClub é uma plataforma de empréstimos americana onde pessoas podem encontrar outras pessoas para pegar empréstimos pessoais. Os dados da plataforma são de 2007 a 2010, oferecidos pela empresa pelo [link](https://www.lendingclub.com/info/download-data.action)\n",
+    "\n",
+    "### Objetivo:\n",
+    "\n",
+    "Nesse projeto vamos criar um modelo para predizer a probabilidade dos clientes conseguirem pagar completamente um empréstimo feito pela plataforma.\n",
+    "\n",
+    "### Significado das Colunas:\n",
+    "* credit.policy: 1 se o cliente atende os requisitos necessários para poder aplicar por um empréstimo no LendingClub.com. 0 se não.\n",
+    "* purpose: O proósito (objetivo) do empréstimo. Pode conter os seguintes valores (\"credit_card\", \"debt_consolidation\", \"educational\", \"major_purchase\", \"small_business\" e \"all_other\").\n",
+    "* int.rate: A taxa de juros do empréstimo, em decimal. Pessoas que são julgadas arriscadas para receber empréstimo recebem juros mais altos.\n",
+    "* installment: O valor da prestação devido pelo recebedor do empréstimo se o empréstimo é aprovado\n",
+    "* log.annual.inc: O registro reportado pelo recebedor do empréstimo  de sua renda anual.\n",
+    "* dti: A quantidade de dívida dividido pela renda anual.\n",
+    "* fico: a pontuação FICO do recebedor do empréstimo .\n",
+    "* days.with.cr.line: O número de dias que o recebedor do empréstimo  tem tido uma linha de crédito.\n",
+    "* revol.bal: Quantidade não paga ao fim do ciclo de pagamento de crédito. (recebedor do empréstimo.)\n",
+    "* revol.util: Uso de quantidade de crédito pelo recebedor do empréstimo relativa ao total de crédito disponível\n",
+    "* inq.last.6mths: O número de consulta de credores nos útimos 6 meses (recebedor do empréstimo)\n",
+    "* delinq.2yrs: O número de vezes que o recebedor de empréstimo atrasou mais de 30 dias o pagamento nos ultimos 2 anos.\n",
+    "* pub.rec: O número de registros públicos depreciativos do recebedor do empréstimo (pedidos de falência, penhoras fiscais ou julgamentos)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import Libraries"
+    "# Bibliotecas Utilizadas"
    ]
   },
   {
@@ -47,9 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get the Data\n",
-    "\n",
-    "** Use pandas to read loan_data.csv as a dataframe called loans.**"
+    "## Recuperando os Dados"
    ]
   },
   {
@@ -65,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Check out the info(), head(), and describe() methods on loans.**"
+    "Verificando a estrutura dos arquivos para posterior análise"
    ]
   },
   {
@@ -486,7 +491,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis"
+    "# Análise Exploratória"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos verificar a pontuação FICO daqueles que atendem (1) ou não atendem (0) os critérios para um empréstimo no LendingClub\n"
    ]
   },
   {
@@ -515,6 +527,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Análise inicial\n",
+    "\n",
+    "* Parece que existe uma política de crédito mímino para aplicar para o Lendig Club\n",
+    "* Quanto maior a pontuação FICO menor a quantidade de pessoas fazendo empréstimo e também menor a taxa de rejeição."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### FICO x Pagamento Completo\n",
+    "Vamos verificar agora a frequencia do pagamento completo do empréstimo também baseado na pontuação FICO"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -537,6 +567,15 @@
     "plt.legend()\n",
     "plt.xlabel('Fico')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Análise Inicial\n",
+    "* Conforme esperado, quanto maior o crédito menor a taxa de inadimplência.\n",
+    "* A proporção de pessoas que não pagam completamente seus empréstimos na taxa dos 200~680 é bastante alta. Isso pode ser um problema para o negócio."
    ]
   },
   {
