Linear Regression Explicado

--- a/project/machine_learning/Linear_Regression.ipynb
+++ b/project/machine_learning/Linear_Regression.ipynb
@@ -61,6 +61,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verificando a Estrutura dos Dados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -639,7 +646,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Treinando e Testando os Dados"
+    "## Treinando e Testando o Modelo"
    ]
   },
   {
@@ -676,13 +683,6 @@
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=101)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Training the Model"
    ]
   },
   {
@@ -724,29 +724,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coefficients: \n",
-      " [25.98154972 38.59015875  0.19040528 61.27909654]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# The coefficients\n",
-    "print('Coefficients: \\n', lm.coef_)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predicting Test Data"
+    "### Predizendo os dados de Teste"
    ]
   },
   {
@@ -794,12 +775,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluating the Model"
+    "Conseguimos notar nesse gráfico que as predições foram bastante acertadas. A maioria dos resultados chegaram muito perto dos valores que estavam contidos na nossa base de dedos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Avaliando o Modelo\n",
+    "\n",
+    "Existem 3 maneiras principais de se verificar a qualidade de um modelo de Machine Learning. Vamos aqui olhar os resultados das 3 métricas para o modelo anterior.\n",
+    "* MAE  - Mean Absolute Error = Média da soma dos erros.\n",
+    "* RMSE - Root Mean Square Error = Raiz quadrada da média dos erros elevados ao quadrado.\n",
+    "\n",
+    "Ambos os valores representam acurácia do modelo e são orientados à 0. Quanto menor o número melhor. Como o RMSE tira o quadrado dos erros antes, ele tende a punir erros maiores, trazendo coeficiente de erro muito maior do que apenas a média absoluta.\n",
+    "\n",
+    "Particularmente eu prefiro sempre medir por ele.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +803,6 @@
      "output_type": "stream",
      "text": [
       "MAE: 7.228148653430838\n",
-      "MSE: 79.81305165097461\n",
       "RMSE: 8.933815066978642\n"
      ]
     }
@@ -816,7 +811,6 @@
     "from sklearn import metrics\n",
     "\n",
     "print('MAE:', metrics.mean_absolute_error(y_test, predictions))\n",
-    "print('MSE:', metrics.mean_squared_error(y_test, predictions))\n",
     "print('RMSE:', np.sqrt(metrics.mean_squared_error(y_test, predictions)))"
    ]
   },
@@ -824,7 +818,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Residuals"
+    "## Resíduos"
    ]
   },
   {
@@ -859,7 +853,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion"
+    "## Conclusão"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verificando os coeficientes, podemos indicar quais ações teriam mais impacto para aumentar o total de dinheiro gasto anualmente.\n",
+    "Com esses resultados, a empresa pode tentar alinhas novas ações buscando melhorar a sua estratégia de negócio.\n",
+    "\n",
+    "Cada valor abaixo significa que uma alteração de 'uma' unidade em alguma categoria, aumenta a quantidade correspondente em dinheiro gasto anualmente."
    ]
   },
   {
@@ -935,12 +939,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interpreting the coefficients:\n",
+    "Resultado dos Coeficientes:\n",
     "\n",
-    "- Holding all other features fixed, a 1 unit increase in **Avg. Session Length** is associated with an **increase of 25.98 total dollars spent**.\n",
-    "- Holding all other features fixed, a 1 unit increase in **Time on App** is associated with an **increase of 38.59 total dollars spent**.\n",
-    "- Holding all other features fixed, a 1 unit increase in **Time on Website** is associated with an **increase of 0.19 total dollars spent**.\n",
-    "- Holding all other features fixed, a 1 unit increase in **Length of Membership** is associated with an **increase of 61.27 total dollars spent**."
+    "- Aumento de 1 unidade em **Avg. Session Length** é associado com um aumento de **25.98** Total Gasto anualmente.\n",
+    "- Aumento de 1 unidade em **Time on App** é associado com um aumento de **38.59** Total Gasto anualmente.\n",
+    "- Aumento de 1 unidade em **Time on Website** é associado com um aumento de **0.19** Total Gasto anualmente.\n",
+    "- Aumento de 1 unidade em **Length of Membership** é associado com um aumento de **61.27** Total Gasto anualmente."
    ]
   }
  ],
