Adicionado estudos em estatistica

--- a/project/machine_learning/K_Means_Clustering.ipynb
+++ b/project/machine_learning/K_Means_Clustering.ipynb
@@ -5,32 +5,35 @@
    "metadata": {},
    "source": [
     "\n",
-    "# K Means Clustering Project \n",
+    "# Projeto K Means Clustering\n",
     "\n",
-    "For this project we will attempt to use KMeans Clustering to cluster Universities into to two groups, Private and Public.\n",
+    "### Apresentação\n",
     "\n",
-    "___\n",
-    "It is **very important to note, we actually have the labels for this data set, but we will NOT use them for the KMeans clustering algorithm, since that is an unsupervised learning algorithm.** \n",
+    "Neste projeto, tentaremos utilizar KMeans para tentar classificar universidades Americanas em dois grupos distintos: Privadas e públicas.\n",
     "\n",
-    "When using the Kmeans algorithm under normal circumstances, it is because you don't have labels. In this case we will use the labels to try to get an idea of how well the algorithm performed, but you won't usually do this for Kmeans, so the classification report and confusion matrix at the end of this project, don't truly make sense in a real world setting!.\n",
-    "___\n",
+    "Geralmente quando utilizamos o K Means nós não temos os labels finais já e estamos tentando identificá-los. Porém, como esses dados já oferecem eles pra gente, vamos utilizá-los para verificar se o nosso algortimo acertou nas classificações.\n",
     "\n",
-    "## The Data\n",
+    "### Objetivo\n",
     "\n",
-    "We will use a data frame with 777 observations on the following 18 variables.\n",
-    "* Private A factor with levels No and Yes indicating private or public university\n",
-    "* Apps Number of applications received\n",
-    "* Accept Number of applications accepted\n",
-    "* Enroll Number of new students enrolled\n",
-    "* Top10perc Pct. new students from top 10% of H.S. class\n",
-    "* Top25perc Pct. new students from top 25% of H.S. class\n",
-    "* F.Undergrad Number of fulltime undergraduates\n",
-    "* P.Undergrad Number of parttime undergraduates\n",
-    "* Outstate Out-of-state tuition\n",
-    "* Room.Board Room and board costs\n",
-    "* Books Estimated book costs\n",
-    "* Personal Estimated personal spending\n",
-    "* PhD Pct. of faculty with Ph.D.’s\n",
+    "Separar as universidades em duas categorias, públicas e privadas.\n",
+    "\n",
+    "### Significado das colunas\n",
+    "\n",
+    "Nossos dados contém 777 entradas sobre universidades americanas, cada uma delas composta de 18 colunas, sendo elas:\n",
+    "\n",
+    "* 'Private' - Um indicador composto por 'Yes' ou 'NO' caso a universidade é privada.\n",
+    "* 'Apps' - Número de aplicações recebidas.\n",
+    "* 'Accept' - Número de aplicações aceitas.\n",
+    "* 'Enroll' - Número de novos estudantes matriculados\n",
+    "* 'Top10perc' - Novos estudantes dos 10% melhores do ensimo médio (High School)\n",
+    "* 'Top25perc' - Novos estudantes dos 25% melhores do ensimo médio (High School)\n",
+    "* 'F.Undergrad' - Numero de estudantes em tempo integral\n",
+    "* 'P.Undergrad' - Número de estudantes em tempo parcial\n",
+    "* 'Outstate' - Mensalidade para fora do estado.\n",
+    "* 'Room.Board' - Preço de manutenção das salas\n",
+    "* 'Books' - Preço estimado dos livros\n",
+    "* 'Personal' Valor estimado gasto com a staff\n",
+    "* 'PhD' Porcentagem de pessoal com PhD\n",
     "* Terminal Pct. of faculty with terminal degree\n",
     "* S.F.Ratio Student/faculty ratio\n",
     "* perc.alumni Pct. alumni who donate\n",
